--- a/lang/korean.lng
+++ b/lang/korean.lng
@@ -577,7 +577,7 @@ STR_SUFFIX_UPGRADE	:{BLACK}(업그레이드)
 STR_SUFFIX_OLDSHAPE	:{BLACK}(오래된 모양)
 STR_SUFFIX_NEWSHAPE	:{BLACK}(새로운 모양)
 STR_SUFFIX_REFURB	:{BLACK}(개조)
-STR_SUFFIX_FLIPPED  :{BLACK}(뒤집힌)
+STR_SUFFIX_FLIPPED  :{BLACK}(뒤집힘)
 STR_SUFFIX_NOLOGO   :{BLACK}(로고 없음)
 STR_SUFFIX_LOGO          :{BLACK}(로고)
 STR_SUFFIX_LARGELOGO    :{BLACK}(큰 로고)
