Japanese lng fixes

--- a/lang/japanese.lng
+++ b/lang/japanese.lng
@@ -2,7 +2,6 @@
 
 lang: 7F
 
-STR_GRF_NAME :JP+ Engines & Wagons v0.12.4
 STR_GRF_DESCRIPTION :{RED}注意!{SILVER} JapanSet3より後にロードしてください{}{}{WHITE}JP{RED}+{WHITE}Engines & Wagons{BLACK}は{WHITE}JP{RED}+{BLACK}シリーズのうち,鉄道省,国鉄,JR各社および私鉄会社より機関車,貨車および客車に集中してお届けします。新しい貨車・客車および塗装のバリエーションが含まれています。{}{}{TINYFONT}作画:{SILVER}Emperor Jake, Voyager One, Davo H., wicket-303, SaYa, Azusa, Erato, andythenorth and the JapanSet Team{}{BLACK}コード:{SILVER}Emperor Jake{}{BLACK}{COPYRIGHT} 2023 GPLv2+.
 
 STR_PARAM_NAME_BASECOSTMODBUY	:購入費
@@ -30,7 +29,6 @@ STR_ERROR_JPPLUSSET			:JP+ Multiple Unitsより後にロードしてください
 STR_NAME_7100	    :7100形
 STR_NAME_7200	    :7200形
 STR_NAME_860	    :860形
-STR_NAME_7050	    :7050形 C-1
 
 STR_NAME_DF50	    :DF50形
 STR_NAME_DD13	    :DD13形
@@ -189,11 +187,11 @@ STR_NAME_MAIL_HONI_8900	:ホニ8900 荷物車
 
 # todo make consistent
 STR_NAME_MAIL_MANI_31	:マユ33 郵便車
-STR_NAME_MAIL_OYU_10	:OYU 10 郵便車
+STR_NAME_MAIL_OYU_10	:オユ10 郵便車
 STR_NAME_MAIL_15		:スユ15 郵便車
 STR_NAME_MAIL_SUYU42    :スユ42 郵便車
 STR_NAME_MAIL_SUYU_44   :スユ44 郵便車
-STR_NAME_MAIL_SUNI_41   :SUNI 41 郵便車
+STR_NAME_MAIL_SUNI_41   :スニ41 郵便車
 STR_NAME_MAIL_50		:マニ50 急行車
 STR_NAME_MAIL_44		:マニ44 急行車
 STR_NAME_MAIL_MANI_34	:マニ34 装甲車
@@ -212,12 +210,12 @@ STR_CONCAT_3S	:{STRING}{STRING}{STRING}
 STR_CONCAT_4S	:{STRING}{STRING}{STRING}{STRING}
 STR_CONCAT_5S	:{STRING}{STRING}{STRING}{STRING}{STRING}
 
-STR_CONCAT_1C	:{BLACK}Operators: {STRING}{}
-STR_CONCAT_2C	:{BLACK}Operators: {STRING} / {STRING}{}
-STR_CONCAT_3C	:{BLACK}Operators: {STRING} / {STRING} / {STRING}{}
-STR_CONCAT_4C	:{BLACK}Operators: {STRING} / {STRING} / {STRING} / {STRING}{}
-STR_CONCAT_5C	:{BLACK}Operators: {STRING} / {STRING} / {STRING} / {STRING} / {STRING}{}
-STR_CONCAT_6C	:{BLACK}Operators: {STRING} / {STRING} / {STRING} / {STRING} / {STRING} / {STRING}{}
+STR_CONCAT_1C	:{BLACK}鉄道会社: {STRING}{}
+STR_CONCAT_2C	:{BLACK}鉄道会社: {STRING} / {STRING}{}
+STR_CONCAT_3C	:{BLACK}鉄道会社: {STRING} / {STRING} / {STRING}{}
+STR_CONCAT_4C	:{BLACK}鉄道会社: {STRING} / {STRING} / {STRING} / {STRING}{}
+STR_CONCAT_5C	:{BLACK}鉄道会社: {STRING} / {STRING} / {STRING} / {STRING} / {STRING}{}
+STR_CONCAT_6C	:{BLACK}鉄道会社: {STRING} / {STRING} / {STRING} / {STRING} / {STRING} / {STRING}{}
 
 STR_CONCAT_1F	:{BLACK} - {STRING}
 STR_CONCAT_2F	:{BLACK} - {STRING}{BLACK} / {STRING}
@@ -432,7 +430,7 @@ STR_NAME_HOKI_650		:ホキ650 有蓋ホッパ車
 STR_NAME_HOKI_800		:ホキ800 ホッパ車
 STR_NAME_HOKI_1000		:ホキ1000 有蓋ホッパ車
 STR_NAME_HOKI_2200		:ホキ2200 ホッパ車 (穀物専用)
-STR_NAME_HOKI_2500		:ホキ2500/9500 Lidded ホッパ車
+STR_NAME_HOKI_2500		:ホキ2500/9500 ホッパ車
 STR_NAME_HOKI_5700		:ホキ5700/7500 有蓋ホッパ車
 STR_NAME_HOKI_8300		:ホキ8300/9300 有蓋ホッパ車
 STR_NAME_HOKI_8500		:ホキ8500 ホッパ車
@@ -443,8 +441,8 @@ STR_NAME_TASA_500		:タサ500/フア27000 タンク車
 STR_NAME_TAMU_500		:タム500 タンク車
 STR_NAME_TAKI_100		:タキ100 タンク車 (石油専用)
 STR_NAME_TAKI_3000		:タキ3000 タンク車
-STR_NAME_TASA_5700		:タサ5700 Gas タンク車
-STR_NAME_TAKI_25000		:タキ25000 Gas タンク車
+STR_NAME_TASA_5700		:タサ5700 タンク車
+STR_NAME_TAKI_25000		:タキ25000 タンク車
 STR_NAME_TAKI_5450		:タキ5450 タンク車 (液化塩素専用)
 STR_NAME_TAKI_9900		:タキ9900 タンク車 (ガソリン専用)
 STR_NAME_TAKI_50000		:タキ50000 タンク車 (石油専用)
