--- a/lang/japanese.lng
+++ b/lang/japanese.lng
@@ -172,7 +172,7 @@ STR_NAME_PAX_OHA31		:オハ31系 客車
 STR_NAME_PAX_SUHA32		:スハ32系 客車
 STR_NAME_PAX_OHA35		:オハ35系 客車
 STR_NAME_PAX_SUHA43		:スハ43系 客車
-STR_NAME_PAX_SUHA44		:スハ43形 {GOLD}"Tokaidō"{BLACK}
+STR_NAME_PAX_SUHA44		:スハ44形 {GOLD}"東海道本線"{BLACK}
 STR_NAME_SLEEPER_10		:10系 客車
 STR_NAME_PASSENGER_12	:12系 客車
 STR_NAME_PASSENGER_24	:24系 寝台車
