--- a/lang/german.lng
+++ b/lang/german.lng
@@ -410,6 +410,7 @@ STR_NAME_KOKIFU_10000	:KOKIFU 10000 Containerwagen mit Bremsabteil
 STR_NAME_KOKI_50000		:KOKI 50000 Containerwagen
 STR_NAME_KOKIFU_50000   :KOKIFU 50000 Containerwagen mit Bremsabteil
 STR_NAME_KOKI_250000	:KOKI 250000 Containerwagen
+STR_NAME_KOKI_350000	:KOKI 350000 Containerwagen
 STR_NAME_KOKI_100		:KOKI 100 / 101 Containerwagen
 STR_NAME_KOKI_107		:KOKI 107 Containerwagen
 STR_NAME_M250_TRAILER   :T260 Cargo EMU Trailer
