--- a/lang/japanese.lng
+++ b/lang/japanese.lng
@@ -411,6 +411,7 @@ STR_NAME_KOKIFU_10000	:コキフ10000 コンテナ車 (車掌室付き)
 STR_NAME_KOKI_50000		:コキ50000 コンテナ車
 STR_NAME_KOKIFU_50000   :コキフ50000 コンテナ車 (車掌室付き)
 STR_NAME_KOKI_250000	:コキ250000 コンテナ車
+STR_NAME_KOKI_350000	:コキ350000 コンテナ車
 STR_NAME_KOKI_100		:コキ100/101 コンテナ車
 STR_NAME_KOKI_107		:コキ107 コンテナ車
 STR_NAME_M250_TRAILER   :T260 (M250貨物電車 付随車)
