--- a/lang/korean.lng
+++ b/lang/korean.lng
@@ -411,6 +411,7 @@ STR_NAME_KOKIFU_10000	:코키후 10000 컨테이너 차장 화차
 STR_NAME_KOKI_50000		:코키 50000 컨테이너 화차
 STR_NAME_KOKIFU_50000   :코키후 50000 컨테이너 차장 화차
 STR_NAME_KOKI_250000	:코키 250000 컨테이너 화차
+STR_NAME_KOKI_350000	:코키 350000 컨테이너 화차
 STR_NAME_KOKI_100		:코키 100 / 101 컨테이너 화차
 STR_NAME_KOKI_107		:코키 107 컨테이너 화차
 STR_NAME_M250_TRAILER   :T260 화물 트레일러 동차
