--- a/lang/english.lng
+++ b/lang/english.lng
@@ -39,6 +39,9 @@ STR_NAME_DD13_2	    :DD13 New type
 STR_NAME_DD16	    :DD16 
 STR_NAME_DD54	    :DD54 
 STR_NAME_DE10       :DE10
+STR_NAME_DE11       :DE11
+STR_NAME_DE11_1     :DE11-0
+STR_NAME_DE11_2     :DE11-2000
 STR_NAME_DE15       :DE15
 STR_NAME_DE15_P     :DE15 Snowplough Unit
 STR_NAME_DD51       :DD51
