great steamer recode c53 and d50

--- a/lang/english.lng
+++ b/lang/english.lng
@@ -30,7 +30,12 @@ STR_ERROR_JPPLUSSET			:Must be loaded after JP+ Set!
 STR_NAME_7100	    :7100
 STR_NAME_7200	    :7200
 STR_NAME_860	    :860
-STR_NAME_7050	    :7050 C-1 
+
+STR_NAME_C53        :C53
+STR_NAME_C53_S      :C53 Streamlined
+
+STR_NAME_D50        :D50
+STR_NAME_D50_R      :D50 Reversed
 
 STR_NAME_DF50	    :DF50
 STR_NAME_DD13	    :DD13
@@ -602,6 +607,7 @@ STR_SUFFIX_UPGRADE	:{BLACK}(Upgraded)
 STR_SUFFIX_OLDSHAPE	:{BLACK}(Old Shape)
 STR_SUFFIX_NEWSHAPE	:{BLACK}(New Shape)
 STR_SUFFIX_REFURB	:{BLACK}(Refurbished)
+STR_SUFFIX_SMOKEDEF	:{BLACK}(Smoke Deflectors)
 STR_SUFFIX_FLIPPED  :{BLACK}(Flipped)
 STR_SUFFIX_NOLOGO   :{BLACK}(No Logo)
 STR_SUFFIX_LOGO          :{BLACK}(Logo)
