--- a/lang/english.lng
+++ b/lang/english.lng
@@ -525,7 +525,7 @@ STR_SUFFIX_JR			:{WHITE}JR Group
 
 STR_SUFFIX_AICHI		:{WHITE}Aichi Railway
 STR_SUFFIX_MEITETSU		:{WHITE}Meitetsu
-STR_SUFFIX_HCC			:{WHITE}Hokkaido Coal Company
+STR_SUFFIX_HCC			:{WHITE}Horonai Railway
 STR_SUFFIX_TOBU 		:{WHITE}Tobu Railway
 STR_SUFFIX_OIGAWA		:{WHITE}Ōigawa Railway
 STR_SUFFIX_SEIBU		:{WHITE}Seibu Railway
