--- a/lang/english.lng
+++ b/lang/english.lng
@@ -46,6 +46,7 @@ STR_NAME_7100	    :7100
 STR_NAME_7200	    :7200
 
 STR_NAME_8620	    :8620
+STR_NAME_8620_R	    :8620 Reversed
 STR_NAME_8700	    :8700
 STR_NAME_C53        :C53
 STR_NAME_C53_S      :C53 Streamlined
@@ -54,6 +55,7 @@ STR_NAME_C58        :C58
 STR_NAME_C62        :C62
 
 STR_NAME_9600	    :9600
+STR_NAME_9600_R	    :9600 Reversed
 STR_NAME_9700	    :9700
 STR_NAME_9750	    :9750
 STR_NAME_D50        :D50
@@ -642,6 +644,7 @@ STR_SUFFIX_UPGRADE	:{BLACK}(Upgraded)
 STR_SUFFIX_OLDSHAPE	:{BLACK}(Old Shape)
 STR_SUFFIX_NEWSHAPE	:{BLACK}(New Shape)
 STR_SUFFIX_REFURB	:{BLACK}(Refurbished)
+STR_SUFFIX_SMALLDEF	:{BLACK}(Small Smoke Deflectors)
 STR_SUFFIX_SMOKEDEF	:{BLACK}(Smoke Deflectors)
 STR_SUFFIX_SEMISTREAM	:{BLACK}(Semi-Streamlined)
 STR_SUFFIX_STREAMLINED	:{BLACK}(Streamlined)
@@ -652,6 +655,7 @@ STR_SUFFIX_LARGELOGO    :{BLACK}(Large Logo)
 STR_SUFFIX_REDLOGO      :{BLACK}(Red Logo)
 STR_SUFFIX_WHITELOGO    :{BLACK}(White Logo)
 STR_SUFFIX_STRIPE       :{BLACK}(Stripe)
+STR_SUFFIX_WARNSTRIPE   :{BLACK}(Warning Stripes)
 STR_SUFFIX_WHISKERS     :{BLACK}(Whiskers)
 STR_SUFFIX_2TONE        :{BLACK}(Two-Tone)
 STR_SUFFIX_SEMIFIC      :{BLACK}(Semi-Fictional)
